--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+# 사용자 지정 제외 폴더 100MB초과
+/[Aa]ssets/Ultimate Low Poly Nature Pack/Terrain/TerrainScene/
